public/css/jjcontroller.css
a {
  text-decoration:  none;
} 
a:hover   {
  text-decoration:  underline;
} 

/* Paragraph style for no-javascript warning */
.jsNone {
    border-style: solid;
    border-width: 1px;
    margin: 10px;
    padding: 5px;
    text-align: center;
}

/* Only show these if javascript is enabled. Need to separate out
pages (.jsOnlyPage), which jquery mobile handles, from other elements
(.jsOnly).  */
.jsOnly, .jsOnlyPage {
    display: none;
}

.jjMainTop {
    float: left;
    width: 78%;
    padding: 15px 0px;
}

.jjSidebar {
    font-size: smaller;
    float: right;
    width: 22%;
}

.jjMainBottom {
    clear: both;
    padding: 0 15px;
}

.jjCaption {
    font-size: smaller;
    text-align: center;
    margin: 0;
    padding: 0;
}

.jjStepNumber {
    font-size: xx-large;
    font-weight: bolder;
    border-style: solid;
    border-width: 3px;
    margin: 5px;
    padding: 0px 5px;
    float: left;
}

.jjStepHeader {
    width: 80%;
    margin: 15px 10px;
    float:left;
}

#jjExampleImage {
    width:280px;
    display:block;
    margin-left: auto;
    margin-right: auto;
}
#jjExampleVideo {
    display:block;
    margin-left: auto;
    margin-right: auto;
}

.jjDisplayUrl, .jjEmailUrl {
    font-size: large;
    font-weight: bold;
    margin: 7px;
}

#jjSlideshowPlay, #jjSlideshowStop, #jjSlideshowPrev,
#jjSlideshowNext, #jjSlideshowFirst, #jjSlideshowLast {
    background-image: url(../images/jj-play-icons-36-black.png);
    background-repeat:no-repeat;
    width: 36px;
    height:36px;
    padding: 6px;
}
 
#jjSlideshowPlay  { background-position:    6px 4px; }
#jjSlideshowStop  { background-position:  -66px 4px; }
#jjSlideshowPrev  { background-position: -138px 4px; }
#jjSlideshowNext  { background-position: -210px 4px; }
#jjSlideshowFirst { background-position: -282px 4px; }
#jjSlideshowLast  { background-position: -354px 4px; }

#jjControls {
    text-align: center;
}

#jjCreateName, #jjCalibrateFile, #jjUploadFile {
    width: 95%;
}

/* ---------------------------------------------------------------------- */

body {
    max-width: 600px;
}

.ui-mobile-viewport {
    max-width: 600px;
    min-height: 100%;
    margin: 0 auto;
    position:relative;
}

.ui-content {
    padding: 0;
}

